--- a/assets/css/apps/note/cmps/NoteLabelPicker.css
+++ b/assets/css/apps/note/cmps/NoteLabelPicker.css
@@ -7,6 +7,7 @@
     background-color: white;
     box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3), 0 2px 6px 2px rgba(60, 64, 67, 0.15);
     border-radius: 10px;
+    z-index: 20;
 
     & ul {
         list-style: none;
