--- a/assets/css/cmps/AppHeader.css
+++ b/assets/css/cmps/AppHeader.css
@@ -4,7 +4,7 @@ header {
     position: sticky;
     top: 0;
     background-color: white;
-    z-index: 200;
+    z-index: 5;
 
     & .logo {
         display: flex;
@@ -14,13 +14,12 @@ header {
         width: 232px;
         padding: 0px 30px 0px 0px;
 
-        & img{
+        & img {
             height: 2rem;
             width: auto;
             margin-bottom: -4px;
         }
     }
-    
 }
 
 .app-header {
@@ -45,7 +44,7 @@ header {
         }
         & a.active .note-btn {
             color: rgb(32, 33, 36);
-            background-color: #FEEFC3;
+            background-color: #feefc3;
         }
     }
 }
